@@ -5,6 +5,7 @@ import edu.ucsd.cse232b.expressions.relative.RelativePath;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Stack;
@@ -23,7 +24,7 @@ public class Slash implements ContextExp {
     public List<Node> solve(Stack<Context> c, Document doc) throws Exception {
         return ce.solve(c, doc).stream().map(node -> {
             try {
-                return child.solve(Collections.singletonList(node));
+                return child.solve(List.of(node));
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
