@@ -4,7 +4,7 @@ import edu.ucsd.cse232b.Context;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Stack;
 
@@ -17,7 +17,7 @@ public class StrConst implements ContextExp {
 
     @Override
     public List<Node> solve(Stack<Context> ctx, Document doc) throws Exception {
-        return Collections.singletonList(doc.createTextNode(this.str));
+        return List.of(doc.createTextNode(this.str));
     }
 
     @Override
